Fix TeacherApps href menu overlap + electionapp width bug

--- a/app/stylesheets/components/election_apps/_desktop.sass
+++ b/app/stylesheets/components/election_apps/_desktop.sass
@@ -18,7 +18,6 @@
       margin: 0 60px
   .apps-container
     margin-bottom: 50px
-    width: 10px
   .app-block
     width: 13rem
     height: 19rem
