--- a/app/stylesheets/components/teacher_apps/_desktop.sass
+++ b/app/stylesheets/components/teacher_apps/_desktop.sass
@@ -71,7 +71,6 @@
       left: 0
       right: 0
       text-indent: -9999px
-      z-index: 1000
     .card-footer
       text-align: center
       background-color: $white
